--- a/Rayan.html
+++ b/Rayan.html
@@ -5,8 +5,13 @@
     <meta name="Rayan" content="width=device-width, initial-scale=1.0">
     <title>Ukraine-Russland-Konflikt</title>
     <style>
-      
+      .box{
+          background:#ffffff;
+      }
     </style>
 <body>
+    <header>
+        <div class="box"></div>
+    </header>
 </body>
 </html>
