--- a/Rayan.html
+++ b/Rayan.html
@@ -6,7 +6,7 @@
     <title>Ukraine-Russland-Konflikt</title>
     <style>
       .box{
-          background:#ffffff;
+          background-color: #ffffff;
       }
     </style>
 <body>
